# systemrt

./: .gitignore  README.md  SECURITY.md  meson.build  meson_options.txt
.github/workflows/: codeql-analysis.yml  flawfinder-analysis.yml  meson.yml
data/: com.expidus.SystemRT.conf  com.expidus.SystemRT.service.in
data/conf.d/: 00-base.ini
gir/: libapparmor.gir  libseccomp.gir  linux.gir
include/: linux.h  seccom-bpf.h
src/: build.vala.in
src/daemon/: application.vala  client.vala  context.vala  daemon.vala  permission.vala  process.c  process.vala  session.vala  user.vala  utils.vala
src/lib/: daemon.vala
src/lib/applib/: library.vala
src/lib/application/: context.vala  permission.vala
src/lib/common/: serializable.vala
src/lib/policy/: context.vala  definition.vala  loader.vala  policy.vala  process.vala  rule.vala  table.vala
src/lib/server/: context.vala
src/perms.d/: base.lua
src/policies/: example.ini
tests/lib/: policy.vala
tests/lib/policy/: loader.vala
vapi/: libapparmor.vapi  libseccomp.vapi  linux.vapi
